@@ -17,6 +17,11 @@
      [sshconnect.c]
      sleep before retrying (not after) since sleep changes errno; fixes
      pr 5250; rad@twig.com; ok dtucker djm
+   - markus@cvs.openbsd.org 2006/10/11 12:38:03
+     [clientloop.c serverloop.c]
+     exit instead of doing a blocking tcp send if we detect a client/server
+     timeout, since the tcp sendqueue might be already full (of alive
+     requests); ok dtucker, report mpf
 
 20061018
  - (dtucker) OpenBSD CVS Sync
@@ -2558,4 +2563,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4576 2006/10/23 17:02:23 djm Exp $
+$Id: ChangeLog,v 1.4577 2006/10/23 17:02:41 djm Exp $
